# laonCropper

./: .dockerignore  .gitignore  .pdca-status.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/04-report/: receipt-detection.report.md
docs/archive/2026-04/: _INDEX.md
docs/archive/2026-04/receipt-detection/: receipt-detection.analysis.md  receipt-detection.design.md  receipt-detection.plan.md
docs/worklog/: 01-plan-and-design.md  02-yolo-original-training.md  03-augmentation-v1.md  04-line-enhance-augmentation-v2.md  05-contour-detection.md  06-ocr-detection.md  07-ocr-density-tuning.md  08-final-decision.md
final/: README.md  cli.py  processor.py  server.py
final/detection/: __init__.py  cliff.py  contour.py  ocr.py
src/: README.md  cli.py  processor.py  server.py
src/detection/: __init__.py  bbox.py  cliff.py  contour.py  ocr.py
