[project]
name = "laoncropper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "easyocr>=1.7.2",
    "fastapi>=0.135.3",
    "huggingface-hub>=1.9.2",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "plotext>=5.3.2",
    "python-multipart>=0.0.24",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.4.36",
    "uvicorn[standard]>=0.44.0",
]
